--- a/MPfm/MPfm.WPF/Classes/Windows/PreferencesWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/PreferencesWindow.xaml
@@ -14,28 +14,28 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button x:Name="btnTabGeneral" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
-                <StackPanel Orientation="Horizontal" Margin="0">
+            <Button x:Name="btnTabGeneral" Style="{StaticResource TabButtonSelected}" Click="btnTab_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="6">
                     <Image Source="/Resources/Images/Buttons/preferences.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">General</Label>
+                    <Label FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">General</Label>
                 </StackPanel>
             </Button>
-            <Button x:Name="btnTabAudio" Click="btnTab_OnClick" Style="{StaticResource TabButton}" Margin="0">
-                <StackPanel Orientation="Horizontal" Margin="0">
+            <Button x:Name="btnTabAudio" Style="{StaticResource TabButton}" Click="btnTab_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="6">
                     <Image Source="/Resources/Images/Buttons/audio.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Audio</Label>
+                    <Label FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Audio</Label>
                 </StackPanel>
             </Button>
-            <Button x:Name="btnTabLibrary" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
-                <StackPanel Orientation="Horizontal" Margin="0">
+            <Button x:Name="btnTabLibrary" Style="{StaticResource TabButton}" Click="btnTab_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="6">
                     <Image Source="/Resources/Images/Buttons/library.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Library</Label>
+                    <Label FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Library</Label>
                 </StackPanel>
             </Button>
-            <Button x:Name="btnTabCloud" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
-                <StackPanel Orientation="Horizontal" Margin="0">
+            <Button x:Name="btnTabCloud" Style="{StaticResource TabButton}" Click="btnTab_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="6">
                     <Image Source="/Resources/Images/Buttons/cloud.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Cloud</Label>
+                    <Label FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Cloud</Label>
                 </StackPanel>
             </Button>
         </StackPanel>
@@ -60,6 +60,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="250" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Folders" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <Grid Grid.Row="1" Margin="2,2,2,0">
@@ -104,6 +105,7 @@
                         </HierarchicalDataTemplate>
                     </ListView.Resources>
                 </ListView>
+                <Label Grid.Row="3" x:Name="lblLibrarySize" Content="Library size: Calculating..." Foreground="#333333" FontSize="11" FontFamily="/Resources/Fonts/#Roboto Regular" Margin="0,0,0,0" />
             </Grid>
         </StackPanel>
         <StackPanel Grid.Row="2" x:Name="gridCloud" Visibility="Hidden">
